# ghostsbom

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/ghostsbom/: __init__.py  cli.py  models.py  osv.py  report.py  risk.py  sbom.py  scanner.py
src/ghostsbom/data/: popular_packages.json
src/ghostsbom/parsers/: __init__.py  base.py  npm_lock.py  poetry.py  requirements.py
tests/: conftest.py  test_cli.py  test_osv_client.py  test_parsers.py  test_risk.py  test_sbom.py  test_scanner.py
tests/fixtures/: osv_querybatch.json  osv_vuln_high.json  osv_vuln_low.json  package-lock.json  requirements.txt
