[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostsbom"
version = "0.1.0"
description = "Software supply-chain analyzer: CycloneDX SBOM generation, OSV vulnerability scanning, and supply-chain risk signals."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "joemunene-by" }]
keywords = ["sbom", "cyclonedx", "supply-chain", "security", "osv", "vulnerability", "typosquat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/joemunene-by/ghostsbom"
Repository = "https://github.com/joemunene-by/ghostsbom"
Changelog = "https://github.com/joemunene-by/ghostsbom/blob/main/CHANGELOG.md"

[project.scripts]
ghostsbom = "ghostsbom.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ghostsbom = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4"]
ignore = ["B008", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
